fix image viewer squashing images on macos

--- a/mnote-extensions/image-viewer/image-viewer.scss
+++ b/mnote-extensions/image-viewer/image-viewer.scss
@@ -14,5 +14,6 @@
   .image-viewer-image {
     image-rendering: pixelated;
     box-shadow: map-get(mn.$vars, main-shadow);
+    height: 100%;
   }
 }
